welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: not found: value faireV
override def run() { faireV(Color.yellow)
                     ^MethodsPicture:5: error: not found: value faireV
faireV(c: Color) = {
^