welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() { faireV(Color.yellow)
}


faireV(c: Color) = {
	setCouleurBrosse(c)
	avance();
	baisseBrosse(); leveBraisse();
	avance(); avance();
	baisseBrosse(); leveBraisse();
	gauche(); avance(); gauche(); avance();
	baisseBrosse(); leveBraisse();
}
